--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "Server for real estate map locating service",
   "main": "server.js",
   "dependencies": {
+    "@google/maps": "^0.4.5",
     "axios": "^0.17.1",
+    "body-parser": "^1.18.2",
     "express": "^4.16.2"
   },
   "devDependencies": {
+    "eslint": "^4.15.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
