--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@google/maps": "^0.4.5",
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2"
   },
   "devDependencies": {
